Improve code quality for sonarqube